--- a/gsitewebfront/frontend/bulid/gsite/index.html
+++ b/gsitewebfront/frontend/bulid/gsite/index.html
@@ -10,6 +10,6 @@
 </head>
 <body style="height: 100%">
   <div id="app" style="height: 100%"></div>
-</body>
+<script type="text/javascript" src="/index-edc1a8eb76ad7d7dc311.js"></script></body>
 
 </html>
