--- a/gsitewebfront/frontend/index.html
+++ b/gsitewebfront/frontend/index.html
@@ -3,15 +3,18 @@
 <head>
   <link rel="shortcut icon" href="#" type="image/ico" media="screen">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="geek720,前端,工作,简历,徐吴双">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/github-markdown-css/2.2.1/github-markdown.css" />
-  <title>Goujila</title>
+  <title></title>
 </head>
 <body style="height: 100%">
   <div id="app" style="height: 100%"></div>
+
+
 </body>
+
 
 </html>
